fix code, pre overflow

--- a/sass/_custom.scss
+++ b/sass/_custom.scss
@@ -6,15 +6,21 @@
   list-style: none;
   gap: 1.5rem;
   padding: 0;
+  margin: 1rem;
   & i {
     font-size: 1.25rem;
   }
 }
 
-footer {
-  margin: auto;
-}
-
 .footer-content {
   text-align: center;
+}
+
+// Code
+pre {
+  overflow-x: scroll;
+  padding: 1rem;
+}
+code {
+  overflow-wrap: break-word;
 }
