--- a/sass/_homepage.scss
+++ b/sass/_homepage.scss
@@ -19,6 +19,7 @@
   display: flex;
   list-style: none;
   gap: 1rem;
+  padding: 0;
   margin-left: auto;
 }
 
